--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.SecondActivity" />
-        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.MainActivity"
+            android:configChanges="orientation|screenSize"
+            />
     </application>
 
 </manifest>
